# cppbackend

./: .clang-format  .gitignore
.github/workflows/: main.yml
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h
sprint1/problems/final_task/solution/: CMakeLists.txt  Dockerfile
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  json_handler.cpp  (+4 more)
sprint1/problems/sum/solution/: main.cpp
sprint2/examples/boost_log/: CMakeLists.txt  main.cpp
sprint2/examples/boost_log/build_debug/: conanbuildinfo.cmake  conanbuildinfo.txt
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/: CMakeLists.txt
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/src/: main.cpp
sprint2/problems/server_logging/solution/src/json/: json_handler.h  json_loader.cpp
sprint2/problems/server_logging/solution/src/logger/: logger.cpp  logger.h
sprint2/problems/server_logging/solution/src/model/: model.h
sprint2/problems/server_logging/solution/src/request_handler/: request_handler.h
sprint2/problems/server_logging/solution/src/response_handler/: response_file_handler.h  response_handler.h
sprint2/problems/server_logging/solution/src/server/: http_server.cpp  http_server.h
sprint2/problems/static_content/solution/: CMakeLists.txt
sprint2/problems/time_control/solution/: CMakeLists.txt
(+99 files in other folders)
